--- a/.github/workflows/api_check.yml
+++ b/.github/workflows/api_check.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 */4 * * *"  # 每 4 小时运行一次 (UTC)
   push:
     paths:
-      - luna-tv-config.json  # 监听 luna-tv-config.json 文件变更
+      - LunaTV-config.json  # 监听 LunaTV-config.json 文件变更
   workflow_dispatch:  # 手动触发工作流
 
 jobs:
