--- a/.github/workflows/encode.yml
+++ b/.github/workflows/encode.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'LunaTV-config.json'
-      - 'jinhuang.json'
+      - 'jingjian.json'
   workflow_dispatch:
 
 jobs:
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add LunaTV-config.txt jinhuang.txt
+          git add LunaTV-config.txt jingjian.txt
           git commit -m "Update Base58 encoding" || echo "No changes"
           git push
